--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # =    JPA / Hibernate Config   =
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.auto-commit=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
