--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.auto-commit=false
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
