--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,14 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-			<version>2.5.0</version>
+			<version>2.6.0</version>
+
 		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.5.0</version>
+			<version>2.6.0</version>
 		</dependency>
 
 		<dependency>
@@ -69,6 +70,15 @@
 			<version>42.7.4</version>
 		</dependency>
 
+		<!--
+		*
+		*
+		*
+			spring-security
+		*
+		*
+		*
+		 -->
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -81,6 +91,16 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+
+		<!--
+		*
+		*
+		*
+			JWT
+		*
+		*
+		*
+		 -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -99,6 +119,10 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
 
 	</dependencies>
 
