--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=project-technique
 server.port=8080
+server.error.include-stacktrace=never
 
 # ===============================
 # =    Database Configuration   =
@@ -19,5 +20,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
 
 
