--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,22 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
+		<!--
+		*
+		*
+		*
+			swagger
+		*
+		*
+		*
+		 -->
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
 			<version>2.6.0</version>
@@ -53,17 +69,35 @@
 			<version>2.6.0</version>
 		</dependency>
 
+
+
+
+		<!--
+		*
+		*
+		*
+			lombok
+		*
+		*
+		*
+		 -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+
+		<!--
+		*
+		*
+		*
+			postgresql connector
+		*
+		*
+		*
+		 -->
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -136,10 +170,20 @@
 		</dependency>
 
 
+		<!--
+                *
+                *
+                *
+                    validation
+                *
+                *
+                *
+        -->
 		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
 
 	</dependencies>
 
