--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=project-technique
-server.port=8080
+server.port=${PORT:8080}
 
 # ===============================
 # =    Database Configuration   =
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/project_tech
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
