--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=${PORT:8080}
 # ===============================
 # =    Database Configuration   =
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/project_tech
+#spring.datasource.url=jdbc:postgresql://localhost:5432/project_tech
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
