--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ server.port=${PORT:8080}
 # =    Database Configuration   =
 # ===============================
 #spring.datasource.url=jdbc:postgresql://localhost:5432/project_tech
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
